2000-03-31  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_F77_LIBRARY_LDFLAGS): bug fix in F77 test program
	(missing whitespace--F77 requires program statements to start in
	column 7).

2000-03-29  Akim Demaille  <akim@epita.fr>

	Rewrite the autoheader chain on top of `autoconf --trace'.

	* autoheader.m4: Dispatch the prototypes next to there AC_
	siblings.
	(AH_TEMPLATE, AH_VERBATIM): Move to...
	* acgeneral.m4: here.
	(AH_OUTPUT): New macro.
	* autoheader.sh: Run `autoconf --trace' instead of `m4 autoheader.m4'.
	* autoheader.m4: Remove.
	* Makefile.am: Adjust.
	* tests/tools.m4 (AH_DEFUN): Remove, no longer makes sense.
	* tests/actests.m4 (autoheader::AC_TATOOINE): Remove, was used by
	the test above.

2000-03-29  Akim Demaille  <akim@epita.fr>

	silent.m4 depends upon the current quotation in m4, which changes
	if `-i' is used or not.

	* autoconf.sh (trace::silent.m4): Removed.
	(trace::run_m4_trace): Pass -Derrprint.

2000-03-29  Akim Demaille  <akim@epita.fr>

	Use `mktemp -d' when possible to create securely a tmp work dir.

	* autoconf.sh: Use it when possible to create the dir $tmp.
	Stop using variables for tmp files, use their names in $tmp.
	[install]: Use the new features of autoconf --trace.

2000-03-28  Akim Demaille  <akim@epita.fr>

	Probably all the versions of bash up to 2.04 fail on
	  fnmatch ("/tmp", "[/\\\\]")
	The backslash must not be last.

	* acgeneral.m4 (_AC_INIT_HELP, AC_PATH_PROG, _AC_OUTPUT_FILES,
	_AC_OUTPUT_LINKS, _AC_OUTPUT_SUBDIRS): Always make `\\' be the
	first character in all the `[]' of `case' patterns.

2000-03-27  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_CHECK_TOOL_PREFIX): Rename back as
	AC_CHECK_TOOL_PREFIX since some packages rely on it.

2000-03-27  Akim Demaille  <akim@epita.fr>

	Move all the language dependent macros into aclang.m4.

	* aclang.m4: New file.
	* autoconf.m4: Include it.
	* autoheader.m4: Likewise.
	* autoupdate.m4: Likewise.
	* Makefile.am: Adjust.